# brnames

./: .flake8  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  sample.txt
brnames/: __main__.py  data.py  gpt.py  model.py  train.py  training.py
